# werkstoff

./: .gitignore  .pre-commit-config.yaml  .rrt.toml  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.claude/commands/: scaffold-plugin-test.md
.github/scripts/: extract-changelog-section.sh
.github/workflows/: auto-version-bump.yml  cicd.yml  plugin-release.yml
docs/superpowers/assets/: 2026-07-19-code-quality-gap-analysis-design.md  2026-07-19-code-quality-gap-analysis-prompt.md
docs/superpowers/plans/: 2026-07-20-self-assess-idiom-remediator.md
docs/superpowers/specs/: 2026-07-20-self-assess-idiom-remediator-design.md
plugins/andon/: CHANGELOG.md  README.md
plugins/andon/.claude-plugin/: plugin.json
plugins/andon/agents/: andon-adjudicator.md  andon-challenger.md  andon-defender.md  andon-verifier.md
plugins/cli-scaffold/: CHANGELOG.md  README.md
plugins/compass/: CHANGELOG.md  README.md
plugins/confab/: CHANGELOG.md  README.md
plugins/cupertino/: CHANGELOG.md  README.md
plugins/self-assess/: CHANGELOG.md  LICENSE  README.md
plugins/self-assess/test-fixtures/two-package-one-manifest/: README.md  pyproject.toml
plugins/self-assess/test-fixtures/two-package-one-manifest/consumer/: process.py
plugins/self-assess/test-fixtures/two-package-one-manifest/producer/: generate.py
test/plugins/: cases.tsv  run.sh  scaffold-test.sh
tools/werkstoff-cli/: CHANGELOG.md  README.md  pyproject.toml
tools/werkstoff-cli/src/werkstoff/: __init__.py  cli.py  core.py
tools/werkstoff-cli/tests/: test_cli.py  test_core.py
tools/werkstoff-cli/tests/__snapshots__/: test_cli.ambr
(+248 files in other folders)
